wk 10 image label

--- a/Lectures/Week10_nonparametric_lecture.html
+++ b/Lectures/Week10_nonparametric_lecture.html
@@ -99,7 +99,7 @@ class: center, middle, inverse, title-slide
 
 .pull-left.center[
 &lt;span style = "color: #18778C"&gt; Normal Q-Q Plot &lt;/span&gt;
-&lt;img src="images/normalResidsQQ.png" width="75%" /&gt;
+&lt;img src="images/normalresidsQQ.png" width="75%" /&gt;
 ]
 
 --
